+검색창, 로딩바

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,10 +6,52 @@ a{text-decoration: none;}
 body{
     background-color: #eee;
 
+    #searchBox{
+        width: 100%;
+        padding: 50px 60px 0;
+        font-size: 0;
+
+        #search{
+            width: 300px;
+            height: 30px;
+            background-color: #fff;
+            border: 1px dotted #ccc;
+            padding-left: 10px;
+        }
+
+        .btnSearch{
+            width: 80px;
+            height: 30px;
+            background-color: #333;
+            color: #fff;
+            font: bold 12px/30px "arial";
+            text-align: center;
+            border: none;
+            outline: none;
+            cursor: pointer;
+            margin-left: 10px;
+            vertical-align: top;
+        }
+    }
+
     #wrap{
         width: 100%;
         padding: 50px;
         overflow: hidden;
+
+        .loading{
+            width: 100px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            transition: 1s;
+            opacity: 1;
+
+            &.off{
+                opacity: 0;
+            }
+        }
 
         #list{
             opacity: 0;
